Access GArray members using g_array_index()

This handles type-casting internally to avoid alignment warnings on
platforms that need to deal with these issues.

https://bugzilla.gnome.org/show_bug.cgi?id=628875